--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body>
     <div class="main">
         <h1>
-            Welcome to the Deploy Now Static Site Tutorial!
+            Sarayima Hosgeldiniz!
         </h1>
+        </h2>
+            Dilek Donmez
+        </h2>
         <p>
             After this session, everyone will have his own static website.
         </p>
